# autoconf-lean

./: Makefile  README.md  lean.m4.in
config-site-generator/: Makefile.am  configure.ac
template/: Makefile.am  configure.ac
